# factbook

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  build-deps.sh  import-libs.sh  index.html  install-deps-ci.sh  install-deps.sh  package.json  pnpm-lock.yaml  rustfmt.toml  setup.ps1  setup.sh  vite.config.js
.github/workflows/: ci.yml  release.yml
.zed/: debug.json
examples/: journal.json  journal.txt
factbook-core/: Cargo.toml  README.md  build.rs  prelude.pl
factbook-core/src/: entry.pest  lang.rs  lib.rs  model.rs  search.rs
factbook-core/src/lang/: entry.pest  entry.rs  view.pest  view.rs
factbook-swipl/: Cargo.toml  README.md  build.rs  prelude.pl
factbook-swipl-macros/: Cargo.toml
factbook-swipl-macros/src/: derive_blob.rs  lib.rs  predicate.rs  query.rs
factbook-swipl-state/: Cargo.toml  README.md
factbook-swipl-state/src/: lib.rs
factbook-swipl/src/: bindings.rs  blob.rs  foreign.rs  lib.rs  query.rs  term.rs  wrapper.h
factbook-swipl/tests/: basic.rs  blobs.rs  ensure_init_once.rs  foreign_context_concurrent.rs  foreign_predicates.rs  query.rs
resources/: welcome.json
src/: App.css  App.jsx  App.module.css  Badge.jsx  Badge.module.css  Button.jsx  Button.module.css  CodeEditor.jsx  CodeEditor.module.css  CollapsiblePanel.css  CollapsiblePanel.jsx  Dialog.jsx  Entries.jsx  Entries.module.css  EntriesContainer.jsx  EntriesContainer.module.css  EntriesHeader.jsx  EntriesHeader.module.css  Entry.css  Entry.jsx  Entry.module.css  EntryList.css  EntryList.jsx  Form.jsx  Form.module.css  FormControls.jsx  FormControls.module.css  FormField.jsx  FormField.module.css  IconButton.jsx  Input.css  Input.jsx  Input.module.css  Label.jsx  Panel.css  Panel.jsx  Panel.module.css  PanelBottomContainer.jsx  PanelBottomContainer.module.css  PanelControls.jsx  (+26 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.linux.json  tauri.conf.windows.json  tauri.linux.conf.json  tauri.linux.release.conf.json  tauri.macos.conf.json  tauri.macos.release.conf.json  tauri.windows.conf.json  tauri.windows.release.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  model.rs  persistence.rs  prolog.rs  settings.rs  util.rs  window.rs
src/api/: appState.jsx  entry.js  event.js  state.js  store.js  tag.jsx  view.js
src/assets/fonts/: IosevkaCustom.css
src/components/: App.jsx  Badge.jsx  Button.jsx  CodeEditor.jsx  Dialog.jsx  Editable.jsx  Entries.jsx  EntriesContainer.jsx  EntriesHeader.jsx  Entry.jsx  EntryList.jsx  EntryListContainer.jsx  EntryListHeader.jsx  FileInput.jsx  Form.jsx  FormControls.jsx  FormField.jsx  HintIcon.jsx  IconButton.jsx  Input.jsx  Journal.jsx  Label.jsx  Panel.jsx  PanelBottomContainer.jsx  PanelControls.jsx  PanelControlsSpacer.jsx  Start.jsx  Status.jsx  Tab.jsx  TabControls.jsx  Tabs.jsx  TransitionGroup.js  ViewEditor.jsx  Workspace.jsx
src/language/: autocomplete.js  common.js  entryLanguage.js  view.grammar  viewLanguage.js  viewParser.gen.js
src/styles/: App.module.css  Badge.module.css  Button.module.css  CodeEditor.module.css  Dialog.module.css  Editable.module.css  Entries.module.css  EntriesHeader.module.css  EntryList.module.css  FileInput.module.css  Form.module.css  FormField.module.css  GenericButton.module.css  HintIcon.module.css  IconButton.module.css  Input.module.css  Journal.module.css  Label.module.css  Panel.module.css  PanelBottomContainer.module.css  PanelControlsSpacer.module.css  Status.module.css  Tab.module.css  TabControls.module.css  Tabs.module.css  TransitionGroup.module.css  Workspace.module.css
