[package]
name = "factbook-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
factbook-swipl = { path = "../factbook-swipl" }
log = "0.4"
pest = "2.8.6"
pest_derive = { version = "2.8.6", features = ["grammar-extras"] }
serde = { version = "1", features = ["derive"] }
stable-vec = "0.4.2"

[dependencies.sparse-tags]
git = "https://github.com/michalwa/sparse-tags.git"
rev = "a329ff43705727eb15de76fe81405486b9378df5"
features = ["serde"]

[dev-dependencies]
pretty_assertions = "1.4.1"
test-log = "0.2.18"

[build-dependencies]
factbook-swipl-state = { path = "../factbook-swipl-state" }
