[package]
name = "factbook"
version = "0.6.0"
description = "Personal knowledge base app based on logic programming"
authors = ["michalwa <michalwa2003@gmail.com>"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "factbook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
factbook-swipl-state = { path = "../factbook-swipl-state" }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-log = "2"
log = "0.4"
factbook-core = { path = "../factbook-core" }
tauri-plugin-prevent-default = { version = "4.0", features = ["platform-windows"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
